history slider ie overflow fixes

--- a/styles/sass/pages/show.scss
+++ b/styles/sass/pages/show.scss
@@ -93,7 +93,7 @@
   .rectangle {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 12.5%;
     width: 75%;
     height: 75%;
     background: white;
