--- a/styles/style.css
+++ b/styles/style.css
@@ -3945,7 +3945,7 @@ input {
   .history-slider .rectangle {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 12.5%;
     width: 75%;
     height: 75%;
     background: white;
